app/assets/stylesheets/_board.scss
/* ... */
.filter {

  .ui-icon {
    // start: UX Experiment 
    display:none;
    // end: UX Experiment 

    position: absolute;
    top: 13px;
    right: 3px;
    width: 22px;
    display:none;
    opacity: 0.8;
    &:hover {
      opacity: 1;

    }
  }
  a:hover {
    background-color:#efefef;
  }

  .dim:hover, .active:hover { 
    .ui-icon {
      display:inline;
      // start: UX Experiment 
      display:none;
      // end: UX Experiment 
    }
  }
}
.column.no-milestone {
  margin: -6px 6px -6px 0;
  padding: 6px 16px 6px 10px;
  border-right: 1px solid #ddd;
}

.task-column {
  float:none;
  @include flex(1);
  @include display(flex);
  @include flex-direction(column);
  @include transition(all 0.4s ease-out);
}
.column {
  min-width: 300px;
  //@include transition(all 0.4s ease-out);
  .hb-column-header {
    cursor: pointer;
  }
  .collapsed {
    cursor: pointer;
    display: none;
    background: #f3f3f3;
    border: 1px solid #e5e5e5;
    box-sizing: border-box;
    @include flex(1);

  }

  .hb-column-header {
    .ui-icon {
      color: #999;
      opacity: 0.5;
      padding: 0px 2px;
    }
    .ui-icon-plus {
      display:none;
    }
  }
  &.hb-state-collapsed {
    @include flex(1 0 80px);
    .hb-column-header .ui-icon-plus { display:inline; }
    .collapsed {
      @include display(flex);
    }
    .hb-column-header span, .hb-column-header .ui-icon-minus, .hb-column-header small {
      display:none;
    }

    .cards {
      @include flex(0 1 auto !important);
      min-height: 0;
      border:0;
      padding: 0;
      margin: 0;
      width: 0;
      height: 0;
      .card {
        border:0;
        padding: 0;
        margin: 0;
        width: 0;
        height: 0;
        > div {
          display:none;
        }
      }
    }

  }
  &.hb-state-collapsed {
    @include flex(0 1 auto);
    width: 90px;
    .hb-column-header .ui-icon-plus { display:inline; }
    .collapsed {
      display: block;
    }
   .hb-column-header span, .hb-column-header .ui-icon-minus, .hb-column-header small, .hb-column-header .ui-icon-gear {
      display:none;
    }
  }
  &.hb-state-collapsed.hovering {
      @include flex(1);
      width: auto;
      .collapsed {
        display: none;
      }
      ul {
        display:block;
      }
   }
}
 @media only screen and (max-width: 959px) {
  .board {
    @include flex-direction(column);
    .column {
      @include flex(0 1 auto);

      .sortable {
        min-height: 72px;
      }

      &.hb-state-collapsed {
        width: auto;

        > h3 span,  > h3 small {
          display:inline;
        }
        .sortable {
          min-height: 0;
        }

       
        &.hovering {
          ul {
            display:none;
          }
        }
        .collapsed {
          display:none;
        }
        
      }
    }
  }

 }

